# cc-pypackage

./: .travis.yml  404.html  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/getting-started/: TUTORIAL.md
getting-started/: index.html
getting-started/TUTORIAL/: index.html
hooks/: pre_gen_project.py
license/: index.html
search/: search_index.json
tests/: test_bake_project.py
