[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
author = Didier Bröska
author_email = didier.broska@gmail.com
name = cookiecutter-pypackage
keyword = project, python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
License_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Sofware Development :: Libraries
url = https://github.com/didierbroska/cookiecutter-pypackage

[options]
python_requires = >=3.5.0
setup_requires =
	setuptools>=41.2.0
	pytest-runner>=5.2
test_requires =
	pytest

[options.extras_require]
tests =
	pytest
	pytest-runner
docs =
	sphinx>=3.1.0
	sphinx_rtd_theme>=0.4.3
dev = 
	%(tests)s
	%(docs)s
	bumpversion>=0.6.0
	tox>=3.14.0
	watchdog==0.9.0

# Tests section
[tool:pytest]
appopts = -v

[tox:tox]
envlist = py35, py36, py37, py38, docs
skipsdist = true

[testenv]
setenv =
	PYTHONPATH = {toxinidir}
extras = tests
commands = 
	python -V
	pip install -U pip
	py.test --basetemp={envtmpdir}

[testenv:docs]
basepython=python
changedir=docs
extras = docs
commands =
	sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html

[alias]
test = pytest
test-all = tox
