[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
author = Didier Bröska
author_email = didier.broska@gmail.com
name = cookiecutter-pypackage
keyword = project, python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
License_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Sofware Development :: Libraries
url = https://github.com/didierbroska/cookiecutter-pypackage

[options]
python_requires = >=3.5.0
setup_requires =
	setuptools>=41.2.0
	wheel
	pytest-runner>=5.2
test_requires =
	pytest>=5.3.1
	pytest-cookies>=0.4.0

[options.extras_require]
tests =
	pytest>=5.3.1
	pytest-cookies>=0.4.0
	pytest-runner
	tox>=3.14.0
	flake8>=3.8.3
	coverage>=4.5.1

docs =
	mkdocs>=1.1.2

dev = 
	%(tests)s
	%(docs)s
	wheel>=0.34.2
	bumpversion>=0.6.0
	watchdog==0.9.0
	twine>=1.13.0

# Tests section
[tool:pytest]
appopts = -v
testpaths = tests/

[tox:tox]
envlist = py35, py36, py37, py38, docs
skipsdist = true

[testenv]
setenv =
	PYTHONPATH = {toxinidir}
extras = tests
whitelist_externals = py.test
commands = 
	python -V
	pip install -U pip
	py.test --basetemp={envtmpdir}

[flake8]
exclude = .git,__pycache__,docs/*,site/*,build,dist,.tox,{{cookiecutter.project_slug}}

[testenv:docs]
basepython=python
extras = docs
commands =
	mkdocs build

[alias]
test = pytest
